# GW-stripping

./: GW-stripping.py  LICENSE  README.md  setup.cfg
GW-stripping/: setup.cfg
GW-stripping/gw_stripping/: __init__.py
GW-stripping/test/: mass.txt  test_gw.py
__MACOSX/GW-stripping/gw_stripping/: ._gw_stripping.py  ._main.py
gw_stripping/: __main__.py  gw_stripping.py  main.py  plot.py
test/: test_gw.py
