[metadata]
name = gw_stripping
version = 0.0.1
author = Nikita Kramarev
author_email = 'kramarev-nikita@mail.ru'
description = Gravitational waves stripping
long_description = file: README.md
license = MIT
keywords = science, astophisics
classifiers = 
        Intended Audience :: Science/Research
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Topic :: Education
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
install_requires =
    numpy>=1.13
    matplotlib>=2.0
    pandas>=1.1.5
    astropy>=4.2
    pytest>=6.2
    fire>=0.3.1
    scipy>=1.5.4

[options.entry_points]
gui_scripts = 
        gw_stripping_plot = gw_stripping.plot:main
console_scripts = 
        gw_stripping = gw_stripping.main:main

[options.packages.find]
exclude = 
    test
